bug fixes..still have bug with some queries