@@ -3,14 +3,20 @@ package com.calendarapp;
 import javafx.animation.FadeTransition;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Node;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
 import javafx.scene.control.Button;
+import javafx.scene.control.Control;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
+import javafx.stage.Modality;
+import javafx.stage.Stage;
 import javafx.util.Duration;
 
 import java.util.ArrayDeque;
 import java.util.Deque;
+import java.util.Objects;
 
 /**
  * Single-window navigation system.
@@ -34,7 +40,7 @@ public class Navigator {
         overlayArea = overlay;
         overlayArea.setVisible(false);
         overlayArea.setOnMouseClicked(e -> {
-            if (e.getTarget() == overlayArea) closeModal();
+            if (e.getTarget() == overlayArea) closeWindow();
         });
     }
 
@@ -55,11 +61,14 @@ public class Navigator {
             FXMLLoader loader = App.loader(fxml);
             Node node = loader.load();
             if (!contentArea.getChildren().isEmpty()) {
-                backStack.push(contentArea.getChildren().get(0));
+                backStack.push(contentArea.getChildren().getFirst());
             }
             setContent(wrapWithBack(node));
             return loader.getController();
-        } catch (Exception e) { e.printStackTrace(); return null; }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
     public static void pop() {
@@ -71,33 +80,43 @@ public class Navigator {
 
     // ── Modal overlay ─────────────────────────────────────────────────────
 
-    public static <T> T showModal(String fxml) {
-        try {
-            FXMLLoader loader = App.loader(fxml);
-            Node node = loader.load();
-            overlayArea.getChildren().setAll(node);
-            overlayArea.setVisible(true);
-            FadeTransition ft = new FadeTransition(Duration.millis(160), overlayArea);
-            ft.setFromValue(0); ft.setToValue(1); ft.play();
-            return loader.getController();
-        } catch (Exception e) { e.printStackTrace(); return null; }
+    public static <T> T showWindow(String fxml) {
+            try {
+                FXMLLoader loader = App.loader(fxml);
+                Parent root = loader.load();
+                Stage stage = new Stage();
+                Scene scene = new Scene(root, 480, 600);
+                scene.getStylesheets().add(Objects.requireNonNull(App.class.getResource("/com/calendarapp/css/styles.css")).toExternalForm());
+                stage.setScene(scene);
+                stage.initModality(Modality.APPLICATION_MODAL);
+                stage.show();
+                //st.showAndWait();
+                return loader.getController();
+            } catch (Exception ex) { ex.printStackTrace(); return null; }
     }
+
+
 
     /** Replace modal content without animation (for edit→form transitions). */
-    public static <T> T swapModal(String fxml) {
+    public static <T> T swapWindow(String fxml, Stage currentStage){
         try {
             FXMLLoader loader = App.loader(fxml);
-            Node node = loader.load();
-            overlayArea.getChildren().setAll(node);
+            Parent scene = loader.load();
+            currentStage.setScene(new Scene(scene));
+            currentStage.show();
             return loader.getController();
-        } catch (Exception e) { e.printStackTrace(); return null; }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
-    public static void closeModal() {
-        closeModal(null);
+    public static void closeWindow() {
+        closeWindow(null);
     }
 
-    public static void closeModal(Runnable afterClose) {
+    public static void closeWindow(Runnable afterClose) {
         FadeTransition ft = new FadeTransition(Duration.millis(120), overlayArea);
         ft.setFromValue(1); ft.setToValue(0);
         ft.setOnFinished(e -> {
@@ -106,6 +125,12 @@ public class Navigator {
             if (afterClose != null) afterClose.run();
         });
         ft.play();
+    }
+
+    public static void close(Control control, Runnable afterClose){
+        Stage currentStage = (Stage) control.getScene().getWindow();
+        if (afterClose != null) afterClose.run();
+        currentStage.close();
     }
 
     // ── Internal helpers ──────────────────────────────────────────────────
